<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="Edit Note"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:tint="@color/colorPrimary"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/noteTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/note_title"
        android:textColor="@color/labelColor_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noteTitleCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleLabel">

        <EditText
            android:id="@+id/noteTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="top|start"
            android:hint="@string/txt_title_hint"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="4sp"
            android:lines="1"
            android:scrollbars="vertical"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />


    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/noteDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/txt_description"
        android:textColor="@color/labelColor_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleCardView" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noteDescriptionCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteDescriptionLabel">

        <EditText
            android:id="@+id/noteDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="top|start"
            android:hint="@string/txt_description_hint"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="4sp"
            android:lines="8"
            android:scrollbars="vertical"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/txt_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteDescriptionCardView"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>